ghost-statefulset.yml
apiVersion: apps/v1 
kind: StatefulSet
metadata: 
  name: ghost
  namespace: ghost
  labels: 
    app: ghost
spec: 
  replicas: 3 
  serviceName: ghost
  selector: 
    matchLabels: 
      app: ghost
  template: 
    metadata:
      name: ghost
      labels:
        app: ghost 
    spec: 
      containers: 
      - name: ghost
        image: ghost:latest
        volumeMounts:
        - name: ghost
          mountPath: /var/lib/ghost/content 
      volumes:
      - name: ghost
        persistentVolumeClaim:
          claimName: ghost
