ghost-srvc.yml
apiVersion: v1
kind: Service
metadata: 
  name: ghost-web-service
  namespace: ghost
  labels: 
    app: ghost
spec: 
  selector: 
    app: ghost
  ports: 
  - name: web-service
    port: 80
    targetPort: 2368
