ghost-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ghost-ingress
  namespace: ghost
  labels: 
    app: ghost
spec:
  ingressClassName: nginx 
  tls: 
  - hosts:
    - blog.gpastor.net
    secretName: gpastor-wildcard
  rules: 
  - host: blog.gpastor.net
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: ghost-web-service 
            port: 
              number: 80
